<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.interview.dictionary.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchTerm"
                android:layout_width="@dimen/search_bar_width"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/margin2x"
                android:hint="@string/enter_a_search_term"
                android:inputType="text" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/searchTerm"
                android:text="@string/search" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sortLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sortAscending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="@dimen/margin2x"
                android:text="@string/sortAscending"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/sortDescending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin2x"
                android:layout_toEndOf="@+id/sortAscending"
                android:text="@string/sortDescending"
                android:visibility="gone"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/sortDescending"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin2x"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

</layout>

